[package]
name = "coauthors"
version = "0.1.0"
authors = ["Daniel Ferguson <danielferguson@me.com>"]
license = "MIT"

[[bin]]
name = "git-coauthors"
path = "src/main.rs"

[dependencies]
clap = "2.31.0"
git2 = { git = "https://github.com/alexcrichton/git2-rs", rev = "master" }
lazy_static = "1.0.0"
regex = "1.0.0"
tempfile = "3.0.3"
