[package]
name = "coauthors"
version = "0.1.0"
authors = ["Daniel Ferguson <danielferguson@me.com>"]
license = "MIT"
edition = "2018"

[[bin]]
name = "git-coauthors"
path = "src/main.rs"

[dependencies]
clap = "2.31.0"
git2 = "0.9"
lazy_static = "1.0.0"
regex = "1.0.0"
structopt = "0.2"
tempfile = "3.0.3"
